--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.2
   firebase_core: ^1.24.0
   get: ^4.6.5
+  ionicons: ^0.2.1
+  firebase_auth: ^3.11.2
+  sign_in_with_apple: ^4.1.0
+  google_sign_in: ^5.4.2
+  url_launcher: ^6.1.6
 
 dev_dependencies:
   flutter_test:
