--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   sign_in_with_apple: ^4.1.0
   google_sign_in: ^5.4.2
   url_launcher: ^6.1.6
+  cloud_firestore: ^3.5.1
 
 dev_dependencies:
   flutter_test:
