--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   google_sign_in: ^5.4.2
   url_launcher: ^6.1.6
   cloud_firestore: ^3.5.1
+  firebase_dynamic_links: ^4.3.11
+  timeago: ^3.3.0
 
 dev_dependencies:
   flutter_test:
