--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   cloud_firestore: ^3.5.1
   firebase_dynamic_links: ^4.3.11
   timeago: ^3.3.0
+  flutter_spinkit: ^5.1.0
 
 dev_dependencies:
   flutter_test:
