--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   firebase_dynamic_links: ^4.3.11
   timeago: ^3.3.0
   flutter_spinkit: ^5.1.0
+  modal_bottom_sheet: ^2.1.2
 
 dev_dependencies:
   flutter_test:
