Screen write is being created

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,9 @@ dependencies:
   timeago: ^3.3.0
   flutter_spinkit: ^5.1.0
   modal_bottom_sheet: ^2.1.2
+  hashtagable: ^2.1.0
+  detectable_text_field: ^2.0.4
+  any_link_preview: ^2.0.9
 
 dev_dependencies:
   flutter_test:
