--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -52,6 +52,7 @@ dependencies:
   any_link_preview: ^2.0.9
   ogp_data_extract: ^0.1.2
   cached_network_image: ^3.2.2
+  infinite_scroll_pagination: ^3.2.0
 
 dev_dependencies:
   flutter_test:
