adding comment function on insight card being created & Bottom navigation tab is disappeared when keyboard show up => main tab controller

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -54,6 +54,7 @@ dependencies:
   share_plus: ^6.2.0
   ogp_data_extract: ^0.1.2
   font_awesome_flutter: ^10.2.1
+  flutter_keyboard_visibility: ^5.4.0
 
 dev_dependencies:
   flutter_test:
