--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
   ogp_data_extract: ^0.1.2
   font_awesome_flutter: ^10.2.1
   flutter_keyboard_visibility: ^5.4.0
+  navigation_history_observer: ^1.1.0
 
 dev_dependencies:
   flutter_test:
