--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,8 @@ dependencies:
   font_awesome_flutter: ^10.2.1
   flutter_keyboard_visibility: ^5.4.0
   navigation_history_observer: ^1.1.0
+  camera: ^0.10.0+4
+  image_picker: ^0.8.6
 
 dev_dependencies:
   flutter_test:
