--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,15 +35,14 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  firebase_core: ^1.24.0
+  firebase_core: ^2.3.0
   get: ^4.6.5
   ionicons: ^0.2.1
-  firebase_auth: ^3.11.2
+  firebase_auth: ^4.1.4
   sign_in_with_apple: ^4.1.0
   google_sign_in: ^5.4.2
   url_launcher: ^6.1.6
-  cloud_firestore: ^3.5.1
-  firebase_dynamic_links: ^4.3.11
+  cloud_firestore: ^4.1.0
   timeago: ^3.3.0
   flutter_spinkit: ^5.1.0
   modal_bottom_sheet: ^2.1.2
@@ -58,6 +57,8 @@ dependencies:
   navigation_history_observer: ^1.1.0
   camera: ^0.10.0+4
   image_picker: ^0.8.6
+  image_cropper: ^3.0.1
+  firebase_dynamic_links: ^5.0.6
 
 dev_dependencies:
   flutter_test:
