A random avatar is displayed if there is no user image url

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ dependencies:
   image_picker: ^0.8.6
   image_cropper: ^3.0.1
   firebase_dynamic_links: ^5.0.6
+  random_avatar: ^0.0.7
+  validators: ^3.0.0
 
 dev_dependencies:
   flutter_test:
