--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -63,6 +63,8 @@ dependencies:
   validators: ^3.0.0
   firebase_storage: ^11.0.6
   path_provider: ^2.0.11
+  package_info_plus: ^3.0.2
+  get_storage: ^2.0.3
 
 dev_dependencies:
   flutter_test:
