--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,6 +65,7 @@ dependencies:
   path_provider: ^2.0.11
   package_info_plus: ^3.0.2
   get_storage: ^2.0.3
+  inview_notifier_list: ^3.0.0
 
 dev_dependencies:
   flutter_test:
