--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -65,7 +65,8 @@ dependencies:
   path_provider: ^2.0.11
   package_info_plus: ^3.0.2
   get_storage: ^2.0.3
-  inview_notifier_list: ^3.0.0
+  stream_transform: ^2.1.0
+  fl_chart: ^0.55.2
 
 dev_dependencies:
   flutter_test:
