--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -67,6 +67,7 @@ dependencies:
   get_storage: ^2.0.3
   stream_transform: ^2.1.0
   fl_chart: ^0.55.2
+  scroll_to_index: ^3.0.1
 
 dev_dependencies:
   flutter_test:
