card header is being updated

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ dependencies:
   scroll_to_index: ^3.0.1
   social_login_buttons: ^1.0.7
   flutter_native_splash: ^2.2.16
+  marquee: ^2.2.3
 
 dev_dependencies:
   flutter_test:
