--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,12 @@ dependencies:
   algolia: ^1.1.1
   flutter_dotenv: ^5.0.2
   elastic_app_search: ^0.4.0
+  #google_mobile_ads: ^2.3.0
+  google_mobile_ads:
+    git:
+      url: https://github.com/SuaMusica/googleads-mobile-flutter.git
+      path: packages/google_mobile_ads
+      ref: master
 
 dev_dependencies:
   flutter_test:
